--- a/app/component/side_bar_item/side_bar_item.scss
+++ b/app/component/side_bar_item/side_bar_item.scss
@@ -1,5 +1,5 @@
 .side-bar-item-container{
-    margin: 0 10px 0 10px;
+    margin: 0px;
     background-color: rgba($color: #FFFFFF, $alpha: 0.25);
     border-radius: 12px;
 }
