--- a/app/component/cv_template/cv_template.scss
+++ b/app/component/cv_template/cv_template.scss
@@ -25,4 +25,8 @@
         background-color: #282b2b;
         border-radius: 0px 12px 12px 0px;
     }
+
+    .side-panel-wrapper {
+        margin: 0px 10px 0px 10px;
+    }
 }
