--- a/app/component/search_bar/search_bar.scss
+++ b/app/component/search_bar/search_bar.scss
@@ -2,7 +2,7 @@
     height: 26px;
     background-color: rgb(#ffffff, 0.05);
     border-radius: 8px;
-    margin: 0 10px 0 10px;
+    margin: 0;
     border-color: rgb(#ffffff, 0.2);
     border-width: 1px;
     border-style: inset;
